--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ ud120-projects
 materials/machine learning/text mining/Amazon_Unlocked_Mobile.csv
 
 tf_logs/
+materials/trading/~$CDB_vectorize_me.pptx
